src/main/java/com/example/springsecurity/global/error/GlobalExceptionHandler.java
package com.example.springsecurity.global.error;

import lombok.extern.slf4j.Slf4j;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.MethodArgumentNotValidException;
import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;

import javax.servlet.http.HttpServletRequest;
import javax.validation.Valid;

@Slf4j
@ControllerAdvice
public class GlobalExceptionHandler {
    /* @Service Exception */
    @ExceptionHandler(BusinessException.class)
    protected ResponseEntity<ErrorResponse> handleBusinessException(HttpServletRequest request, final BusinessException e) {
        log.error(e.getErrorCode().getCode() + " : " + e.getErrorCode().getMessage());

        final ErrorCode errorCode = e.getErrorCode();
        final ErrorResponse response = new ErrorResponse(errorCode);

        log.error("errorCode > " +errorCode);
        log.error("response > " +response);

        return new ResponseEntity<>(response, HttpStatus.valueOf(errorCode.getStatus()));
    }

    /* @Valid Exception */
    @ExceptionHandler(MethodArgumentNotValidException.class)
    protected ResponseEntity<ErrorResponse> handleMethodArgumentNotValidException(MethodArgumentNotValidException e, HttpServletRequest request) {
        log.error("handleMethodArgumentNotValidException", e);

        ErrorResponse response = ErrorResponse.makeErrorResponse(e.getBindingResult());

        return new ResponseEntity<>(response, HttpStatus.BAD_REQUEST);
    }
}
